# mentoring-driver

./: .gitignore  README.md  pyproject.toml  requirements.txt  tests_report.xml  tox.ini
src/driver_mguzikix/: __init__.py  example.py  serial_driver.py
target_tests/: test_device_basics.py
tests/: conftest.py  example_test.py  test_example.py  test_serial_driver.py
